kubernetes/cross-seed/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cross-seed
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: cross-seed-secrets

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cross-seed
  template:
    metadata:
      labels:
        app: cross-seed
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
      containers:
      - name: cross-seed
        image: ghcr.io/cross-seed/cross-seed:6.13.7@sha256:a1fed512261fd968c55cb03c51cff9c6620aa76a34b3b591afca95c890aa8225
        command: [cross-seed, daemon]
        ports:
        - containerPort: 2468
        volumeMounts:
        - name: config-file
          mountPath: /config/config.js
          subPath: config.js
          readOnly: true
        - name: config
          mountPath: /config
        - name: torrents
          mountPath: /torrents
          subPath: qBittorrent/BT_backup
          readOnly: true
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config-file
        configMap:
          name: cross-seed-config
      - name: config
        persistentVolumeClaim:
          claimName: cross-seed-config
      - name: torrents
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: downloads
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
      - name: cleanup-script
        configMap:
          name: cross-seed-cleanup-script
          defaultMode: 0755
