kubernetes/cross-seed/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cross-seed
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: iscsi-chap-secret,cross-seed-secrets

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cross-seed
  template:
    metadata:
      labels:
        app: cross-seed
    spec:
      containers:
      - name: cross-seed
        image: ghcr.io/cross-seed/cross-seed
        command: [cross-seed, daemon]
        ports:
        - containerPort: 2468
        volumeMounts:
        - name: config-file
          mountPath: /config/config.js
          subPath: config.js
          readOnly: true
        - name: config
          mountPath: /config
        - name: torrents
          mountPath: /torrents
          subPath: qBittorrent/BT_backup
          readOnly: true
        - name: downloads
          mountPath: /downloads
        - name: video
          mountPath: /video
        - name: cross-seed-data
          mountPath: /cross-seeds
      volumes:
      - name: config-file
        configMap:
          name: cross-seed-config
      - name: config
        iscsi:
          targetPortal: 172.19.74.139
          iqn: iqn.2000-01.com.synology:fs2.cross-seed.05f22bcf4f5
          lun: 1
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
      - name: torrents
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: cross-seed-data
        persistentVolumeClaim:
          claimName: cross-seed-data
      - name: downloads
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
      - name: video
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/video
