kubernetes/cross-seed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cross-seed
  labels:
    app: cross-seed
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  tls:
  - hosts:
    - cross-seed.k.oneill.net
    secretName: cross-seed-tls
  rules:
  - host: cross-seed.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cross-seed
            port:
              number: 2468
